# eyeseg

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Development.md  README.md  pyproject.toml
.github/workflows/: bumpversion.yaml  ci.yaml  pythonpublish.yaml
docker/: Dockerfile  Makefile
eyeseg/io_utils/: input_pipe.py  losses.py  metrics.py  test.ipynb  utils.py
eyeseg/models/: custom_unet.py  feature_refinement_net.py  feature_refinement_net_he.py  multiscale_gated_densenet.py  parts.py  utils.py  vanilla_unet.py
eyeseg/models/weights/1zc44dxo/: config.yaml
eyeseg/models/weights/2c41ukad/: config.yaml
eyeseg/models/weights/3avqygsi/: config.yaml
eyeseg/scripts/: main.py  utils.py
eyeseg/scripts/commands/: analyse.py  check.py  drusen.py  evaluate.py  layers.py  plot_bscans.py  plot_data.py  plot_enface.py  quantify.py  segment.py  train.py
octseg/: grids.py
octseg/io_utils/: input_pipe.py  utils.py
octseg/models/: feature_refinement_net.py  multiscale_gated_densenet.py  utils.py
octseg/models/weights/2c41ukad/: config.yaml
octseg/models/weights/3avqygsi/: config.yaml
octseg/scripts/: drusen.py  layers.py  main.py
octseg/scripts/commands/: check.py  drusen.py  layers.py  plot_bscans.py  plot_enface.py  quantify.py
scripts/: make_docker_image.sh
tests/: test_octseg.py  test_octseg2.py  test_octseg_grids.py
