[tool.poetry]
name = "eyeseg"
version = "0.1.0"
description = ""
authors = ["Olivier Morelle <oli4morelle@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
click = "^8.1.2"
eyepie = "^0.6.3"
tqdm = "^4.62.3"
PyYAML = "^6.0"
tensorflow = "=2.9.1"
tensorflow-addons = "^0.17.1"
wandb = "^0.12.18"
pandas = "^1.4.2"
tensorflow-probability = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.16.0"
commitizen = "^2.20.4"

[tool.poetry.scripts]
eyeseg = "eyeseg.scripts.main:main"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
